updated from work

--- a/src/main/webapp/greeting.xhtml
+++ b/src/main/webapp/greeting.xhtml
@@ -39,3 +39,8 @@
     <h:messages style="color: red; border: dotted"/>
 </h:body>
 </html>
+<!--This an example of simple jsf page.
+Warning! Every JSF page must have an "xhtml" extention!
+Unlike with a jsp page we allow not connect bean name with real bean. For example: in code we use to access name
+"greeting", but nowhere we don't establish that the variable with name "greeting" accordint to bean Greeting.
+JSF somehow it ows found our bean by variable name-->
